# simdle-native

./: CMakeLists.txt  README.md  bench.mjs  binding.c  binding.cc  binding.gyp  index.js  package.json  test.mjs
.github/workflows/: integrate.yml  prebuild.yml  test.yml
